import net.neoforged.moddevgradle.internal.RunGameTask

buildscript {
	repositories {
		maven {
			name 'Beanification'
			url 'https://maven.tamaized.com/releases/'
			content {
				includeGroup("tamaized")
			}
		}
	}
	dependencies {
		classpath "tamaized:beanification:${beanification_version}:gradle"
	}
}

plugins {
	id 'java-library'
	id 'eclipse'
	id 'idea'
	id 'org.jetbrains.gradle.plugin.idea-ext' version "1.1.10"
	id 'maven-publish'
	// Version List: https://projects.neoforged.net/neoforged/ModDevGradle
	id 'net.neoforged.moddev' version "${mdg_version}"
	id "com.dorongold.task-tree" version "4.0.0"
	id 'com.gradleup.shadow' version '8.3.3'
}

apply plugin: 'tamaized.beanification'

configurations {
	shade
}

shadowJar {
	dependsOn(tasks.named("jar"))
	afterEvaluate {
		from({ tasks.named("jar").get().outputs })
	}
	archiveClassifier.set('universal')
	configurations = [project.configurations.shade]
	relocate 'tamaized.beanification', "${project.mod_id}.beanification"
}

jar {
	archiveClassifier = "slim"
}

def secrets = new Properties()
def secretsFile = file('secrets.properties')
if (secretsFile.exists()) {
	secretsFile.withInputStream {
		stream -> secrets.load(stream)
	}

	fileTree("secrets").matching {
		include "**/*.properties"
	}.each {
		File file ->
			file.withInputStream {
				stream -> secrets.load(stream)
			}
	}
}

idea {
	project.settings.compiler.javac {
		// Disable “Report use of deprecated features” https://github.com/JetBrains/gradle-idea-ext-plugin/wiki#javac-settings-of-idea-compiler
		generateDeprecationWarnings = false
	}

	module {
		downloadJavadoc = true
		downloadSources = true
	}
}

version = (hasProperty("CIRevision") ? CIRevision : project.mod_version)
group = group_name

java {
	toolchain {
		languageVersion.set(JavaLanguageVersion.of(21))
	}
}

tasks.withType(JavaCompile).configureEach {
	options.compilerArgs << "-Xlint:all,-classfile,-processing,-deprecation,-this-escape" << "-Werror"
	options.encoding = 'UTF-8'
}

base {
	archivesName = "${project.mod_id}-${project.minecraft_version}"
}

subprojects {
	version = project(":").version
}

sourceSets {
	test {
		compileClasspath += main.compileClasspath + main.output

		java {
			srcDirs += ['src/main/java', 'src/test/java']
		}
		resources {
			srcDirs += ['src/test/generated']
		}
	}
}

neoForge {
	// we need the subprojects to evaluate first so that the sourceSets are properly constructed
	evaluationDependsOnChildren()

	def mod_id = project.mod_id
	version = project.neo_version

	validateAccessTransformers = true

	addModdingDependenciesTo sourceSets.test

	mods {
		"${mod_id}" {
			it.sourceSet this.sourceSets.main
		}

		'tf-asm' {
			it.sourceSet project(":tf-asm").sourceSets.main
		}

		'test' {
			sourceSet sourceSets.main
			sourceSet sourceSets.test
		}
	}

	def mainMod = mods."${project.mod_id}"

	unitTest {
		enable()
		testedMod = mainMod
	}

	runs {
		configureEach {
			gameDirectory = project.file('run')
			systemProperty 'forge.logging.console.level', 'debug'
			logLevel = org.slf4j.event.Level.DEBUG
		}

		client {
			client()
			programArguments.addAll '--username', secrets.getProperty("username") ?: 'Dev', secrets.getProperty("uuid") ? '--uuid' : '', secrets.getProperty("uuid") ?: ''
		}

		server {
			server()
			programArgument '--nogui'
		}

		data {
			data()
			gameDirectory = project.file('run-data')
			programArguments.addAll '--mod', mod_id, '--all', '--output', file('src/generated/resources/').getAbsolutePath(), '--existing', file('src/main/resources/').getAbsolutePath()
		}

		'gametest-server' {
			type = 'gameTestServer'
			gameDirectory = project.file('run-test')
			systemProperty 'neoforge.enabledGameTestNamespaces', mod_id
			sourceSet = sourceSets.test
			loadedMods = [mods.'tf-asm', mods.'test']
		}
	}
}

afterEvaluate { // DO NOT ASK... it fixes the runClient and family tasks :harold:
	tasks.withType(RunGameTask).configureEach {
		classpathProvider.setFrom(classpathProvider.files.stream().filter(f -> !f.toString().contains('tf-asm')).toList())
	}
}

jar {
	exclude 'data/twilightforest/function/**'
}

sourceSets.main.resources { srcDir 'src/generated/resources' }

repositories {
	mavenLocal()
	maven {
		name 'Jared\'s Maven' // JEI
		url 'https://maven.blamejared.com/'
	}
	maven {
		name = "OctoStudios" //Curios
		url = uri("https://maven.octo-studios.com/releases")
	}
	maven {
		name 'Shedaniel\'s Maven' //REI
		url "https://maven.shedaniel.me"
	}
	maven {
		name = "TerraformersMC" //EMI
		url = "https://maven.terraformersmc.com/"
	}
	maven { // TOP
		url "https://maven.k-4u.nl"
	}
	maven { //CS
		url "https://nexus.resourcefulbees.com/repository/maven-public/"
	}
    maven {
        name 'Curseforge Maven' // Jade
        url "https://www.cursemaven.com"
        content {
            includeGroup "curse.maven"
        }
    }
	maven {
		name 'Tama\'s Maven' // Beanification
		url 'https://maven.tamaized.com/releases/'
		content {
			includeGroup("tamaized")
		}
	}
}

dependencies {
	jarJar implementation(project(":tf-asm"))

	testImplementation("net.neoforged:testframework:${neo_version}") {
		transitive = false
	}

	def beanification = "tamaized:beanification:${project.beanification_version}"
	implementation beanification
	shade beanification
	testImplementation "${beanification}:tests"
	testCompileOnly "${beanification}:test-sources"

	//make sure to only pick one of these when testing (switch others to compileOnly)
	implementation "mezz.jei:jei-${project.base_minecraft_version}-neoforge:${project.jei_version}"
	compileOnly "me.shedaniel:RoughlyEnoughItems-neoforge:${project.rei_version}"
	compileOnly "dev.emi:emi-neoforge:${project.emi_version}+${project.base_minecraft_version}"

	// theillusivec4
	implementation "top.theillusivec4.curios:curios-neoforge:${project.curios_version}+${project.base_minecraft_version}"

	//curse maven
	implementation "curse.maven:jade-324717:5529595"
	implementation "curse.maven:cosmetic-armor-reworked-237307:5427303"
	runtimeOnly "curse.maven:worldedit-225608:5830452"
//	runtimeOnly "curse.maven:jeed-532286:5483315"
//	runtimeOnly "curse.maven:museum-curator-859070:4629894"
	if (project.enable_tips_mod == 'true') {
		runtimeOnly "curse.maven:tips-306549:5844057"
		runtimeOnly "curse.maven:bookshelf-228525:6098975"
		runtimeOnly "curse.maven:prickle-1023259:5836410"
	}
	runtimeOnly "curse.maven:suggestion-provider-fix-469647:5598604"

	compileOnly "mcjty.theoneprobe:theoneprobe:${project.top_version}"

    //mods we dont have compat with but are nice to have
	runtimeOnly "com.telepathicgrunt:CommandStructures-Neoforge:4.3.2+1.20.6"

	testImplementation group: 'net.neoforged', name: 'testframework', version: project.neo_version
	testImplementation group: 'org.junit.jupiter', name: 'junit-jupiter', version: '5.10.3'
	testRuntimeOnly group: 'org.junit.jupiter', name: 'junit-jupiter-engine', version: '5.10.3'
	testImplementation group: 'org.mockito', name: 'mockito-junit-jupiter', version: '5.12.0'
}

configurations.testImplementation {
	exclude module: 'tf-asm'
}

test {
	useJUnitPlatform()
	testLogging {
		events "failed"

		showExceptions true
		exceptionFormat "full"
		showCauses true
		showStackTraces true

		showStandardStreams = false
	}
}

processResources {
	def ver = project.version
	filesMatching("META-INF/neoforge.mods.toml") {
		expand([
			'file'           : [
				'jarVersion': ver
			]
		])
	}
}

jar {
	manifest {
		attributes([
			'Specification-Title'     : mod_id,
			'Specification-Vendor'    : "TeamTwilight",
			'Specification-Version'   : "1",
			'Implementation-Title'    : this.project.name,
			'Implementation-Version'  : this.project.jar.archiveVersion,
			'Implementation-Vendor'   : "TeamTwilight",
			'Implementation-Timestamp': new Date().format("yyyy-MM-dd'T'HH:mm:ssZ")
		])
	}
}

def mavenUser = System.getenv("MAVEN_USER")?: secrets.getProperty("maven_username")
def mavenToken = System.getenv("MAVEN_PASS")?: secrets.getProperty("maven_password")

publishing {
	publications {
		create('mavenJava', MavenPublication) {
			afterEvaluate {
				artifact this.project.shadowJar
				artifact this.project.sourceJar
			}
			groupId mavenUser
			artifactId this.project.mod_id
		}
	}
	repositories {
		maven {
			url "https://maven.tamaized.com/releases"
			credentials {
				username mavenUser
				password mavenToken
			}
		}
	}
}

tasks.register('sourceJar', Jar) {
	dependsOn 'classes'
	from sourceSets.main.allSource
	archiveClassifier = 'sources'
}

tasks.withType(JavaCompile).configureEach {
	options.encoding = 'UTF-8'
}

build.dependsOn shadowJar
